--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -35,7 +35,7 @@
 					<button class="btn"><i class="icon-trash"></i> <%= t(:delete) %> <span></span></button>
 				</div>
 				<div class="btn-group">
-					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-question-sign"></i> Help <span class="caret"></span></button>
+					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-question-sign"></i>  <%= t(:help) %> <span class="caret"></span></button>
 				</div>
 			</div><br>
 			<table class="table table-bordered" style="width:940px;background-color:white" >
