--- a/arability/app/views/pages/home.html.erb
+++ b/arability/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<% if gamer_signed_in? %>
+<h3><%= link_to t(:my_projects), :controller => "projects", :action => "index" %></h3
+	<% end %>
