--- a/arability/app/views/projects/edit.html.erb
+++ b/arability/app/views/projects/edit.html.erb
@@ -1,5 +1,5 @@
 <h1 class="container"><%= t(:edit_project)%></h1>
 
-<%= render 'form2' %>
+<%= render 'form' %>
 
 <%= link_to t(:back), projects_path %>
