--- a/arability/app/views/games/gettrophies.js.erb
+++ b/arability/app/views/games/gettrophies.js.erb
@@ -1,26 +1,31 @@
-<% if params[:level] == nil || params[:score] == nil%>
-    error = '<div class="alert" style="text-align:right; margin:10px;">' +
-            '<button type="button" class="close" data-dismiss="alert">&times;</button>' +
-            '<strong>تحذير!</strong> حاولت طلب بيانات غير صالحة.' + '</div>';
+<% if !gamer_signed_in? %>
+    error =  '<h1 class="award-title">سجل دخولك أو إشترك لكي تربح جوائز أو لتحقيق إنجازات</h1>';
     $("#zone").append($(error));
 <% else %>
-  <% won_trophies = Trophy.get_new_trophies_for_gamer(current_gamer.id, params[:level], params[:score]) %>
-
-  <% if won_trophies.length == 0 %>
-      success = '<h1 class="award-title">لقد ربحت كل الجوائز لهذه المرحلة </h1>';
+  <% if params[:level] == nil || params[:score] == nil%>
+      error = '<div class="alert" style="text-align:right; margin:10px;">' +
+              '<button type="button" class="close" data-dismiss="alert">&times;</button>' +
+              '<strong>تحذير!</strong> حاولت طلب بيانات غير صالحة.' + '</div>';
+      $("#zone").append($(error));
   <% else %>
-      <% won_trophies.map { |nt| current_gamer.trophies << nt } %>
-      success = '<h1 class="award-title">مبروك! لقد فزت الجوائز التالية!</h1>';
-      trophies = [];
+    <% won_trophies = Trophy.get_new_trophies_for_gamer(current_gamer.id, params[:level], params[:score]) %>
 
-      <% won_trophies.each do |t| %>
-        trophies.push('<div class="award">' + '<%= t.name %>' + '</div>');
-      <% end %>
-       
-  <% end %>
-      $("#zone").append($(success));
-      for(var i = 0; i < trophies.length; i++) {
-        $("#zone").append($(trophies[i]));
-      }
-   
+    <% if won_trophies.length == 0 %>
+        success = '<h1 class="award-title">لقد ربحت كل الجوائز لهذه المرحلة </h1>';
+    <% else %>
+        <% won_trophies.map { |nt| current_gamer.trophies << nt } %>
+        success = '<h1 class="award-title">مبروك! لقد فزت الجوائز التالية!</h1>';
+        trophies = [];
+
+        <% won_trophies.each do |t| %>
+          trophies.push('<div class="award">' + '<%= t.name %>' + '</div>');
+        <% end %>
+         
+    <% end %>
+        $("#zone").append($(success));
+        for(var i = 0; i < trophies.length; i++) {
+          $("#zone").append($(trophies[i]));
+        }
+     
+    <% end %>
 <% end %>
