[WIP] Salma fixed missing icons in RTL

--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <% if I18n.locale == :ar %>
     <%= stylesheet_link_tag "bootstrap.rtl", :media => "all" %>
     <%= stylesheet_link_tag "bootstrap-responsive.rtl", :media => "all" %>
+    <%= stylesheet_link_tag "bootstrap-rtl-overrides", :media => "all" %>
     <%= javascript_include_tag "bootstrap.rtl" %>
   <% else %>
     <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
