--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -7,7 +7,7 @@
     <div class="nav-box">
       جوائز
   </div>
-    <div class="nav-box">
+    <div class="nav-box" onclick="showTrophies()">
       الإنجازات
     </div>
     <div class="nav-box">
@@ -24,3 +24,12 @@
     
   </div>
 </div>
+<script type="text/javascript" charset="utf-8">
+  function clear() {
+    $("#zone").empty();
+  }
+  function showTrophies() {
+    clear();
+    $.get("/games/showtrophies");
+  }
+</script>
