pushed twitter space for omar

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -32,4 +32,7 @@
     var request = "/games/gettrophies/?level=" + level + "&score=" + score;
     $.get(request);
   }
+  function getScore() {
+    return 123456;
+  }
 </script>
