--- a/arability/app/views/tweet/tweet_score.html.erb
+++ b/arability/app/views/tweet/tweet_score.html.erb
@@ -1,3 +1,2 @@
-
-<a href="https://twitter.com/share" class="twitter-share-button" data-text="I could tweet anything I want" data-via="2lOH">Tweet</a>
+<a href="https://twitter.com/share" class="twitter-share-button" data-text='لقد حصلت على <%= @varName %> نقطة' data-via="arability">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
