--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -24,11 +24,9 @@
           <a class="dropdown-toggle" href="#" data-toggle="dropdown"><%= t :sign_in %> <strong class="caret"></strong></a>
             <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
               <%= form_for("gamer", :url => gamer_session_path) do |f| %>
-                <%= f.text_field :email, :style => "margin-bottom: 15px;", :placeholder => "Email", :size => "30" %>
-                <%= f.password_field :password, :style => "margin-bottom: 15px;", :placeholder => "Password", :size => "30" %>
-                <%= f.check_box :remember_me, :style => "float: left; margin-right: 10px;" %>
-                <%= f.label :remember_me %>
-                <%= f.submit "Sign In", :style => "clear: left; width: 100%; height: 32px; font-size: 13px;", :class => "btn btn-primary" %>
+                <%= f.text_field :email, :style => "margin-bottom: 15px;", :placeholder => t(:email), :size => "30" %>
+                <%= f.password_field :password, :style => "margin-bottom: 15px;", :placeholder => t(:password), :size => "30" %>
+                <%= f.submit t(:sign_in), :style => "clear: left; width: 100%; height: 32px; font-size: 13px;", :class => "btn btn-primary" %>
              <!--    <%= link_to "Sign In with Google", :style => "clear: left; width: 88%; height: 30px; font-size: 13px", :class => "btn btn-success" %> -->
               <% end %>
             </div>
