--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -6,13 +6,27 @@
     return words;
   }
 
+  function have_to_sign_in(){
+    $.post("/games/vote_errors.js");
+  }
+
+  function display_error_sign_in(locale){
+    $('#workspace').remove();
+    if(locale=="english"){
+      $('.zone').append('<div class=\"vote_form\" style="font-size:20px; float:left; margin-left:30px;"><p>You have to be signed in to display vote form</p></div>');
+    }
+    if(locale="arabic"){
+      $('.zone').append('<div class=\"vote_form\"style="font-size:20px; float:left; margin-left:30px;" ><p>يجب ان يكون قد تم تسجيل دخولك</p></div>');
+    }
+  }
+
   function request_vote_form(){
     if(words.length==0){
       alert('empty');
       return;
     }
     $('#workspace').remove();
-    $('.zone').append('<div class=\"vote_form\"></div>');
+    $('.zone').append('<div class=\"vote_form\"></div><div class=\"alert\"></br></div>');    
     var first_word = words.shift();
     $.post("/games/vote.js", { word: first_word});
   }
@@ -47,7 +61,7 @@
 </div>
 
 <div id="workspace" style="position:relative; left: 10px; ">
-  <a onclick="request_vote_form()"  id="btn">start voting</a>
+  <a onclick="have_to_sign_in()"  id="btn">start voting</a>
 </div>
 
 
