[issue #168][WIP] fixing bugs

--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -71,7 +71,7 @@
 		<div id="collective" class="accordion-body collapse in">
 			<div class="accordion-inner">
 				<% key_id = Keyword.where(:name => @search_keyword).first.id %>
-				<% if get_keyword_synonym_visual(keywor) != [] %>
+				<% if get_keyword_synonym_visual(key_id) != [] %>
 				 	<%= high_chart("my_id4", chart_keyword_synonym(key_id)) do |c| %>
           <%= raw "options.tooltip.formatter = function() {return '<b>'+ this.point.name +'</b>: '+ this.y +' %';}"  %>
           <%= raw "options.plotOptions.pie.dataLabels.formatter = function() { if (this.y > 5) return this.point.name; }"  %>
