--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -11,7 +11,7 @@ function display_next_word(){
 		$('.zone').append('<div style="position:center; background-color: yellow;">DONE VOTING</div>');
 		return;
 	}
-	$('.zone').append('<div class=\"vote_form\"><div class=\"errors\"></br></div></div>');
+	$('.zone').append('<div class=\"vote_form\"><div class=\"errors\"></div></div>');
 	var word = words.shift();
     $.post("/games/vote.js", { word: word});
 }
@@ -22,7 +22,6 @@ function skip_keyword(){
 
 function suggest_synonym_to_word(keyword_id){
 	translation = document.getElementById('suggest_synonym_textbox').value;
-	alert(translation+" "+ keyword_id);
 	$.post("/games/record_synonym.js" ,{synonym_name:translation, keyword_id:keyword_id});
 }
 
@@ -31,8 +30,8 @@ vote_form=[];
 vote_form.push('<div style="position:relative; left: 10px;" >');
 vote_form.push('<% submitted_word=params[:word] %>');
 vote_form.push('<% keyword=Keyword.where(:name => submitted_word).first%>');
-vote_form.push('<%synonym_list=keyword.synonyms %>');
-vote_form.push('</br></br><p id="text" >!"<%= keyword.name %>"  من فضلك اختار معني لكلمة</p>');
+vote_form.push('<%synonym_list=keyword.synonyms.limit(4) %>');
+vote_form.push('</br></br><p id="text" style="color:white;" >!"<%= keyword.name %>"  من فضلك اختار معني لكلمة</p>');
 vote_form.push('<br/>');
 vote_form.push('<div class="btn-toolbar" id="synonym_buttons">');
 vote_form.push('<% i=1 %>');
@@ -45,7 +44,6 @@ vote_form.push('<% if syn.approved %>');
 vote_form.push('<% if i%2==0 %></div></br><% end %>');
 vote_form.push('<% i=i+1 %>');
 vote_form.push('<% end %>');
-vote_form.push('</div></div>');
 vote_form.push('<% end %>');
 vote_form.push('</br><div class="span6">');
 vote_form.push('</br><button class="btn btn-primary span2" type="submit" id="suggest_synonym_button"  onclick="suggest_synonym_to_word(<%= keyword.id %>);" >سجل هذا المعني</button>');
