--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -13,10 +13,10 @@
   function display_error_sign_in(locale){
     $('.zone').empty();
     $('#workspace').remove();
-    if(locale=="english"){
+    if(locale == "english"){
       $('.zone').append('<div class=\"vote_form\" style="font-size:20px; float:left; margin-left:30px;"><p>You have to be signed in to display vote form</p></div>');
     }
-    if(locale="arabic"){
+    if(locale == "arabic"){
       $('.zone').append('<div class=\"vote_form\"style="font-size:20px; float:left; margin-left:30px;" ><p>يجب ان يكون قد تم تسجيل دخولك</p></div>');
     }
   }
