--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <%= javascript_include_tag "bootstrap.rtl", :media => "all" %>
   <% else %>
     <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
+    <%= javascript_include_tag "bootstrap" %>
   <% end %>
   <%= csrf_meta_tags %>
 </head>
