--- a/arability/app/views/projects/choose_keywords.html.erb
+++ b/arability/app/views/projects/choose_keywords.html.erb
@@ -2,10 +2,6 @@
 <h3>اختار من الكلمات التالية ليتم اضافتها إلى هذا المشروع </h3>
 <h6 style="color:red;">تبقى لك عدد 2 كلمة</h6>
 <%= form_tag add_from_csv_keywords_project_path, :method => :put, :id => 'form_to_select_words' do %>
-  <input type="hidden" value="<%= @id_words_in_database_before %>" name="id_words_in_database_before">
-  <input type="hidden" value="<%= @id_first_synonyms_words_in_database_before %>" name="id_synonyms_words_in_database_before">
-  <input type="hidden" value="<%= @id_words_not_in_database_before %>" name="id_words_not_in_database_before">
-  <input type="hidden" value="<%= @id_first_synonyms_words_not_in_database_before %>" name="id_synonyms_words_not_in_database_before">
   <table class="table table-bordered">
   <tr>
     <td style="width:20px;"></td>
@@ -16,9 +12,10 @@
   <% counter_syn = 0 %>
   <% size = @words_in_database_before.size %>
   <%while counter < size %> 
-    <%word = @words_in_database_before[counter]%> 
+    <%word = @words_in_database_before[counter]%>
+    <%prefred_syn = @id_first_synonyms_words_in_database_before[counter]  %> 
     <tr>
-    <td><%= check_box_tag "words_ids[]", word.id %></td>
+    <td><%= check_box_tag "words_ids[]", "#{word.id}|#{prefred_syn}" %></td>
     <td><%= word.name %></td>
     <td>
       <% num_syns = @num_synonyms_words_in_database_before[counter].to_i %>
@@ -52,9 +49,10 @@
   <% counter_syn = 0 %>
   <% size = @words_not_in_database_before.size %>
   <%while counter < size %> 
-    <%word = @words_not_in_database_before[counter]%> 
+    <%word = @words_not_in_database_before[counter]%>
+    <%prefred_syn = @id_first_synonyms_words_not_in_database_before[counter]  %> 
     <tr>
-    <td><%= check_box_tag "words_ids[]", word.id %></td>
+    <td><%= check_box_tag "words_ids[]", "#{word.id}|#{prefred_syn}" %></td>
     <td><%= word.name %><span style="color:red;">*new*</span></td>
     <td>
       <% num_syns = @num_synonyms_words_not_in_database_before[counter].to_i %>
