[#181][WIP] Twitter is written in arabic in all views

--- a/arability/app/views/authentications/remove_twitter_connection.html.erb
+++ b/arability/app/views/authentications/remove_twitter_connection.html.erb
@@ -1,10 +1,10 @@
-<h2 align="right">الخاص بك Twitter الخطوة الثالثة: تواصل مع</h2>
+<h2 align="right">الخطوة الثالثة: تواصل مع تويتر الخاص بك</h2>
 <br>
 <div align="right">
     <div>
         <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100" />
-        <%= link_to "Twitter تواصل مع", "/auth/twitter" %>
+        <%= link_to "تواصل", "/auth/twitter" %>
     </div>
     <br>
-    <%= link_to "إنتهاء", "" %>
+    <%= link_to "إنتهاء", root_path %>
 </div>
