--- a/arability/app/views/authentications/twitter_callback.html.erb
+++ b/arability/app/views/authentications/twitter_callback.html.erb
@@ -1,9 +1,9 @@
-<h2 align="right">الخاص بك Twitter الخطوة الثالثة: تواصل مع</h2>
+<h2 align="right">الخطوة الثالثة: تواصل مع تويتر الخاص بك</h2>
 <br>
 <div align="right">
     <div>
         <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100" />
-        <%= link_to "Twitter إلغاء الاتصال مع", "/authentications/remove_twitter_connection" %>
+        <%= link_to "إلغاء الاتصال", "/authentications/remove_twitter_connection" %>
         <!--<button class="btn btn-link" type="button" action="remove_twitter_connection">Twitter إلغاء الاتصال مع</button>
         <%= current_gamer%>
         <%= gamer_signed_in? %>-->
@@ -11,5 +11,5 @@
        <%= gamer.gid %>
     </div>
     <br>
-    <%= link_to "إنتهاء", "" %>
+    <%= link_to "إنتهاء", root_path %>
 </div>
