--- a/arability/app/views/projects/choose_keywords.html.erb
+++ b/arability/app/views/projects/choose_keywords.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <h3>اختار من الكلمات التالية ليتم اضافتها إلى هذا المشروع </h3>
-<h6 style="color:red;">تبقى لك عدد 2 كلمة</h6>
+<h6 style="color:red;">تبقى لك عدد <%= @words_remaining %> كلمة</h6>
 <%= form_tag add_from_csv_keywords_project_path, :method => :put, :id => 'form_to_select_words' do %>
   <table class="table table-bordered">
   <tr>
@@ -87,5 +87,5 @@
 <% end %>
 </div>
 <script type="text/javascript">
-checkboxlimit(form_to_select_words, 2)
+checkboxlimit(form_to_select_words, @words_remaining)
 </script>
