--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -95,6 +95,11 @@
     request_string = "/games/getprizes/?level=" + level + "&score=" + score;
     $.get(request_string);
   }
+  function getTrophies(level, score) {
+    clear();
+    request_string = "/games/gettrophies/?level=" + level + "&score=" + score;
+    $.get(request_string);
+  }
   function getScore() {
     return 123456;
   }
