--- a/arability/app/views/games/gettrophies.js.erb
+++ b/arability/app/views/games/gettrophies.js.erb
@@ -8,14 +8,11 @@
               '<strong>تحذير!</strong> حاولت طلب بيانات غير صالحة.' + '</div>';
       $("#zone").append($(error));
   <% else %>
-    <% won_trophies = Trophy.get_new_trophies_for_gamer(current_gamer.id, params[:score], params[:level]) %>
+    <% won_trophies = Trophy.get_new_trophies_for_gamer(current_gamer.id, params[:level], params[:score]) %>
     <% if won_trophies.length == 0 %>
         score_space = '<div class="award">لقد نلت ' + getScore() + '  نقطة!</div>';
         $("#zone").append($(score_space));
-        <% won_trophies = Trophy.get_new_trophies_for_gamer(current_gamer.id, params[:level], params[:score]) %>
-
-      <% if won_trophies.length == 0 %>
-          success = '<h1 class="award-title">لقد انهيت كل الانجازات لهذه المرحلة</h1>';
+        success = '<h1 class="award-title">لقد انهيت كل الانجازات لهذه المرحلة</h1>';
       <% else %>
           <% won_trophies.map { |nt| current_gamer.trophies << nt } %>
           success = '<h1 class="award-title">مبروك! لقد فزت الجوائز التالية!</h1>';
@@ -29,8 +26,7 @@
           for(var i = 0; i < trophies.length; i++) {
             $("#zone").append($(trophies[i]));
           }
-          var to_prizes_btn = <a class="btn btn-success">View Won Prizes</a>
+          var to_prizes_btn = '<br><a style="margin: 10px" class="btn btn-success" onclick="getPrizes(level,score)">كشف الجوائز </a>';
           $("#zone").append($(to_prizes_btn));
-    <% end %>
   <% end %>
 <% end %>
