[Issue #186][NW] deleted a route i don't use anymore, now calling import csv from a button instead of a link

--- a/arability/app/views/projects/choose_keywords.html.erb
+++ b/arability/app/views/projects/choose_keywords.html.erb
@@ -2,7 +2,7 @@
 <h3>اختار من الكلمات التالية ليتم اضافتها إلى هذا المشروع </h3>
 <h6 style="color:red;">تبقى لك عدد <%= @words_remaining %> كلمة</h6>
 <%= form_tag add_from_csv_keywords_project_path, :method => :put, :id => 'form_to_select_words' do %>
-  <table class="table table-bordered">
+  <table class="table table-bordered" id="words_synonyms_table">
   <tr>
     <td style="width:20px;"></td>
     <td style="width:300px;"><strong>Word</strong></td>
@@ -87,5 +87,5 @@
 <% end %>
 </div>
 <script type="text/javascript">
-checkboxlimit(form_to_select_words, @words_remaining)
+checkboxlimit(form_to_select_words, @words_remaining);
 </script>
