--- a/arability/app/views/projects/import_csv.html.erb
+++ b/arability/app/views/projects/import_csv.html.erb
@@ -3,8 +3,7 @@
 <form action="<%= choose_keywords_project_path %>" enctype="multipart/form-data" method="POST">
   <input type="file" id="csvfile" name="csvfile">
   <input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
-  <input type="hidden" value="<%= @project_id %>" name="project_id">
-  <input type="submit" class="btn btn-success" value="Upload">
+  <input type="submit" class="btn btn-success" value="رفع الملف">
 </form>
 <p>لتحميل ملف CSV:</br></p>
 <ol>
