--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -38,7 +38,7 @@
     </div>
     <div class="tab-pane" id="tab2">
       <p>
-        <% @shared_projects.each do |project| %>
+        <% @my_projects.each do |project| %>
   <div class="well well-small">
   <strong>اسم:</strong>
   <br />
