[ISSUE #183][WIP] moves facebook connect button to settings view and adjusts its locale settings

--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -35,3 +35,5 @@
 </div>
 </div>
 <% end %>
+
+<p font='20'><%= t(:connect_to) link_to t(:facebook), gamer_omniauth_authorize_path(:facebook) %></p>
