--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -1,7 +1,6 @@
 <div class="container" border="1"> 
 	<h3><%= t(:project)%>: <%=@project.name %></h3><br>
 	<%= link_to 'Import CSV file', import_csv_project_path %>
-	<%= button_to "Add words", action: "search", controller: "search", :project_id => @project.id %>
 	<form>
 		<div class="container well">
 			<div class="btn-toolbar" style="margin: 0;">
@@ -35,6 +34,9 @@
 				</div>
 				<div class="btn-group">
 					<button class="btn"><i class="icon-trash"></i> <%= t(:delete) %> <span></span></button>
+				</div>
+				<div class="btn-group">
+					<button class="btn"><i class="icon-plus-sign"></i> <%= link_to t(:Add_words) , {action: "search", controller: "search", :project_id => @project.id}, {:style=>'color:#000000', :class => "css_class"} %> <span></span></button>
 				</div>
 				<div class="btn-group">
 					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-question-sign"></i>  <%= t(:help) %> <span class="caret"></span></button>
