--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -14,10 +14,10 @@
     $('.zone').empty();
     $('#workspace').remove();
     if(locale == "english"){
-      $('.zone').append('<div class=\"vote_form\" style="font-size:20px; float:left; margin-left:30px;"><p>You have to be signed in to display vote form</p></div>');
+      $('.zone').append('<div class=\"vote_form\" style="font-size:20px; color:white; float:left; margin-left:30px;"><p>You have to be signed in to display vote form</p></div>');
     }
     if(locale == "arabic"){
-      $('.zone').append('<div class=\"vote_form\"style="font-size:20px; float:left; margin-left:30px;" ><p>يجب ان يكون قد تم تسجيل دخولك</p></div>');
+      $('.zone').append('<div class=\"vote_form\"style="font-size:20px; color:white; float:left; margin-left:30px;" ><p>يجب ان يكون قد تم تسجيل دخولك</p></div>');
     }
   }
 
@@ -28,7 +28,7 @@
       return;
     }
     $('#workspace').remove();
-    $('.zone').append('<div class=\"vote_form\"></div><</br>');    
+    $('.zone').append('<div class=\"vote_form\"></div></br>');    
     var first_word = words.shift();
     $.post("/games/vote.js", { word: first_word});
   }
