--- a/arability/app/views/admin/_admin-navbar.html.erb
+++ b/arability/app/views/admin/_admin-navbar.html.erb
@@ -2,11 +2,13 @@
 	<div class="navbar-inner">
 		<div class="container">
 			<a class="brand" href="/admin/index">لوحة تحكم Arability</a>
+			<% if logged_in? %>
 			<ul class="nav pull-right">
 				<li>
 					<%= link_to "تسجيل الخروج", :action => "logout" %>
 				</li>
 			</ul>
+			<% end %>
 		</div>
 	</div>
 </div>
