--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -107,27 +107,25 @@
 }
 
 .label1{
-      font-size:300%;
+      font-size:100%;
       text-align: center;
-      height: 50px;
-      width:500px; 
-      margin-left:auto;
-      margin-right:auto;
-      color: #155B84;
-      broder: 1px solid black;
+      height: 50px; 
+      color: white;
       background-color: transparent;
-
+      overflow: hidden;
+      width: 190px;
+      line-height: 50px;
     }
 
 .label-div{
-    background-color: transparent; 
-    width: 500px; 
+    background-color: #333333; 
+    width: 190px; 
     border-color: black; 
-    position: relative; 
     float: left; 
     height: 50px; 
-    margin-left: 10px; 
-    margin-bottom: 10px;
+    margin-left: -20px; 
+    border-radius: 30px;
+
 }
 
 
@@ -136,7 +134,7 @@
   float: left; 
   width: 550px; 
   border:2px solid black; 
-  width:500px; 
+  width:500px;
   height: 420px; 
   margin-top: 10px; 
   margin-left: 10px;
