--- a/arability/app/views/admin/index.html.erb
+++ b/arability/app/views/admin/index.html.erb
@@ -1,6 +1,34 @@
-<%= link_to "logout", :action => "logout" %>
-<%= link_to "import csv", action: "import_csv" %>
-
-<h1>Admin#index</h1>
-
-<%= render 'admin/wordadd' %>
+<div class="container admin">
+	<div class="row">
+		<div class="span3">
+			<div class="well">
+				<ul class="nav nav-list nav-stacked" id="admin-tabs">
+					<li class="active">
+						<a href="#admin-home" data-toggle="tab">الصفحة الرئيسية</a>
+					</li>
+					<li class="divider"></li>
+					<li class="nav-header">إدارة الكلمات</li>
+					<li>
+						<a href="#admin-add-word" data-toggle="tab">إضافة كلمة جديدة</a>
+					</li>
+					<li>
+						<a href="#admin-import-csv-file" data-toggle="tab">استيراد ملف كلمات بصيغة CSV </a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="span9">
+			<div class="tab-content">
+				<div class="tab-pane well span7" id="admin-home">
+					
+				</div>
+				<div class="tab-pane well span7" id="admin-add-word">
+					<%= render 'admin-add-word' %>
+				</div>
+				<div class="tab-pane well span7" id="admin-import-csv-file">
+					<%= render 'admin-import-csv-file' %>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
