[ISSUE #183][WIP] fixes facebook button

--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -36,4 +36,4 @@
 </div>
 <% end %>
 
-<p font='20'><%= t(:connect_to) link_to t(:facebook), gamer_omniauth_authorize_path(:facebook) %></p>
+<p font='20'><%= t(:connect_to)%> <%= link_to t(:facebook), gamer_omniauth_authorize_path(:facebook) %></p>
